Bug 97299 - Slide transition can't be removed once assigned
Summary: Slide transition can't be removed once assigned
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Michael Meeks
URL:
Whiteboard: target:5.1.2
Keywords: bibisected, regression
: 98045 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-21 14:35 UTC by Katarina Behrens (Inactive)
Modified: 2016-10-25 19:17 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Katarina Behrens (Inactive) 2016-01-21 14:35:00 UTC
1. New Impress document
2. Insert 2 slides and go to Slide transitions sidebar
3. Click 1st slide and assign some transition to it (e.g. wheel, but any other will do)
4. Now change 1st slide transition back to 'None'

5a. Go to 2nd slide and then back to 1st slide

  => slide transition is set back to "wheel" (instead of no transition as one would expect after step 4)

5b. Start slideshow (F5)

  => 1st slide appears with "wheel" slide transition instead of no transition
Comment 1 Julien Nabet 2016-01-21 21:30:05 UTC
On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.

It seems "No effect" is considered as "ambiguous effect" (see http://opengrok.libreoffice.org/xref/core/sd/source/ui/animations/SlideTransitionPane.cxx#138)
In fact, every effect is considered first as ambiguous effect.
Then SlideTransitionPane::getTransitionEffectFromControls() (see http://opengrok.libreoffice.org/xref/core/sd/source/ui/animations/SlideTransitionPane.cxx#761) updates it but only in this case:
    if(  mpVS_TRANSITION_ICONS->IsEnabled() &&
        !mpVS_TRANSITION_ICONS->IsNoSelection() &&
         mpVS_TRANSITION_ICONS->GetSelectItemId() > 0 )
In "No effect" case, !mpVS_TRANSITION_ICONS->IsNoSelection() is wrong and mpVS_TRANSITION_ICONS->GetSelectItemId() = 0

I suppose related to this:
   591         // ToDo: That 0 is "no transition" is documented nowhere except in the
    592         // CTOR of sdpage
    593         if( aEffect.mnType == 0 )
    594             mpVS_TRANSITION_ICONS->SetNoSelection();
    595         else
    596             updateVariants( getPresetOffset( aEffect ) );
(from same file)

Hope it helps a bit.
Comment 2 Julien Nabet 2016-02-21 08:21:22 UTC
*** Bug 98045 has been marked as a duplicate of this bug. ***
Comment 3 raal 2016-02-25 06:29:25 UTC
Micheal, probably this one? commit 5de806fbd2040c8e047aca04a1d80efb10a6f0f2. Switch transition selection pane to use an icon-based ValueSet.	


 git bisect skip
There are only 'skip'ped commits left to test.
The first bad commit could be any of: 83e5a0abdc51c60d67b839ff9f3e715d61369a4a 8cc9c79367d541e8e67a2c939a51a9cc289b52df 198960516f0962e448bd97173031096bd9737d57
We cannot bisect more!


commit 83e5a0abdc51c60d67b839ff9f3e715d61369a4a
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Nov 12 16:17:28 2015 -0800

    source d1bda375a077d0de31cc4f5e602b3e33fdde0d55
    source d1bda375a077d0de31cc4f5e602b3e33fdde0d55
author	Noel Grandin <noel@peralex.com>	2015-11-10 14:21:02 (GMT)
committer	Noel Grandin <noel@peralex.com>	2015-11-11 09:35:39 (GMT)
commit d1bda375a077d0de31cc4f5e602b3e33fdde0d55 (patch)
tree 2356e81835db7d1a9a87cb09af2eb5a35dc8db82
parent 5de806fbd2040c8e047aca04a1d80efb10a6f0f2 (diff)
extensions: boost::ptr_vector->std::vector<std::unique_ptr>


	commit 8cc9c79367d541e8e67a2c939a51a9cc289b52df
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Nov 12 16:15:49 2015 -0800

    source 5de806fbd2040c8e047aca04a1d80efb10a6f0f2
    source 5de806fbd2040c8e047aca04a1d80efb10a6f0f2

author	Michael Meeks <michael.meeks@collabora.com>	2015-11-10 11:29:54 (GMT)
committer	Michael Meeks <michael.meeks@collabora.com>	2015-11-11 09:35:03 (GMT)
commit 5de806fbd2040c8e047aca04a1d80efb10a6f0f2 (patch)
tree 629a0860abc51c19fd57f689efaf77ba44bb3b26
parent cc920bc27a0c37233d65ee1b20712e3ac6896c9a (diff)
Switch transition selection pane to use an icon-based ValueSet.	
	
commit 198960516f0962e448bd97173031096bd9737d57
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Nov 12 16:19:17 2015 -0800

    source 2a2b9920c1ccd9cfb2ec474ceffed7c5d78ecb00
    source 2a2b9920c1ccd9cfb2ec474ceffed7c5d78ecb00

	author	Noel Grandin <noel@peralex.com>	2015-11-10 14:24:35 (GMT)
committer	Noel Grandin <noel@peralex.com>	2015-11-11 09:35:39 (GMT)
commit 2a2b9920c1ccd9cfb2ec474ceffed7c5d78ecb00 (patch)
tree ed65ead97a2f776d1194332d0657bd1ddee54696
parent d1bda375a077d0de31cc4f5e602b3e33fdde0d55 (diff)
extensions: boost::ptr_vector->std::vector<std::unique_ptr>
Comment 4 Commit Notification 2016-02-25 19:20:38 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b3d08b755aae1022ad5a08d5cbd91c242535ed89

tdf#97299 - allow slide transitions to be removed.

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Meeks 2016-02-25 19:21:57 UTC
Thanks for the report - sorry it took a while to get to =) trivial fix thanks to Julien's nice analysis.
Comment 6 Commit Notification 2016-02-26 08:30:14 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6ce8f5808d2d27ad1702559d8f7d1a94c886487a&h=libreoffice-5-1

tdf#97299 - allow slide transitions to be removed.

It will be available in 5.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Roland Taylor 2016-02-26 16:17:58 UTC
Will this build be added to any of the Ubuntu PPAs?