tdf#97299 - allow slide transitions to be removed.

Change-Id: I652330f6526b1ecf735ed02554e3627768b41085